--- a/index.html
+++ b/index.html
@@ -6,23 +6,43 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/f49b128aef.js" crossorigin="anonymous"></script>
   
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
 </head>
 <body>
 
-  Build The Community Your Fans Will Love
+  <header>
+    <img src="images/logo.svg" alt="">
+  </header>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  <main>
+    
+      <img src="images/illustration-mockups.svg" alt="">
+    
 
-  Register
+    <div class="text">
+
+      <h2>Build The Community Your Fans Will Love</h2> 
+
+      <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+          Create connections with your users as you engage in genuine discussion.</p> 
+
+      <button>Register</button>
+
+    </div>
+  </main>
 
   <footer>
+
+    <div class="icons">
+      <a href=""><i class="fab fa-facebook-square"></i></a>  <a href=""><i class="fab fa-instagram"></i></a> <a href=""><i class="fab fa-twitter"></i></a>
+    </div>
+
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      <small>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://www.frontendmentor.io/profile/mrbannerbear">Sayed Saqlain</a>.</small>
     </p>
   </footer>
 </body>
